# mivney_1

./: .gitignore  23tree.cpp  AVLtree copy.h  AVLtree.cpp  AVLtree.h  CMakeLists  CMakeLists.txt  DS.h  PlayersManager.cpp  PlayersManager.h  README.md  TNode.cpp  TNode.h  exceptions.cpp  library.cpp  library1.cpp  side_stuff.cpp  small_main.cpp  stuff_to_delete.cpp  tasks.todo  tasks.txt  valgrind-out.txt
AVL_Tests/: small_main.cpp  tests1.cpp
New folder/: AVLtree copy.cpp
backup/: AVLtree.h  PlayersManager.cpp  PlayersManager.h  library1.h
course_files/: library1.h:Zone.Identifier  main1.cpp  main1.cpp:Zone.Identifier  test.in  test.in:Zone.Identifier  test.out:Zone.Identifier
final/: AVLtree.h  PlayersManager.cpp  PlayersManager.h  library1.cpp
pm_tests/: pm_main_out  printfunc.cpp
pm_tests/our_outputs/: our_out0
pm_tests/wet1_tests/: out_0.txt  out_1.txt  out_10.txt  out_11.txt  out_12.txt  out_13.txt  out_14.txt  out_15.txt  out_16.txt  out_17.txt  out_18.txt  out_19.txt  out_2.txt  out_20.txt  out_21.txt  out_22.txt  out_23.txt  out_24.txt  out_25.txt  out_26.txt  out_27.txt  out_28.txt  out_29.txt  out_3.txt  out_30.txt  out_31.txt  out_32.txt  out_33.txt  out_34.txt  out_35.txt  out_36.txt  out_37.txt  out_38.txt  out_39.txt  out_4.txt  out_40.txt  out_41.txt  out_42.txt  out_43.txt  out_44.txt  (+60 more)
